# pi-web-js

./: .gitignore  AGENTS.md  BROWSERGENT_DEFERRED.md  BUG_REPORT_sleep_bigint_mismatch.md  CHANGELOG.md  CODE_REVIEW_select_option_listbox_scoping.md  CONTEXT.md  Cargo.toml  EXTENSION_JS_ERROR_PLAN.md  GOAL_STATEMENT.md  HANDOFF.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LOGGING_SYSTEM_HANDOFF.md  MANIFEST-DOCS-STRICT-TYPING-PLAN.md  PARITY_MATRIX.md  PLAN_WINDOW_ISOLATION.md  README.md  SNAPSHOT_DOM_PIPELINE_DRAFT.md  TDD_FIX_PLAN.zh-CN.md  comprehensive-test-notebook.json  greenhouse-combobox-observations.md  issues.md  notebook.json  package-lock.json  problems.md  quickjs-date-bug-repro.js  test-web-js-apis.mjs  test-web-js-params.mjs  test-web-js.mjs
crates/: Cargo.toml
crates/dom-semantic-tree/: Cargo.toml
crates/dom-semantic-tree/js/: dom_semantic_tree.d.ts  index.ts  package.json  tsconfig.json
crates/dom-semantic-tree/src/: collect.rs  lib.rs  markdown_visible.rs  name.rs  refs.rs  visibility.rs
crates/extension-js/: Cargo.toml
crates/extension-js/js/: API.md  LOGGING.md  background.js  biome.json  content-script.ts  extension_js.d.ts  fs-types.ts  generated.ts  index.test.ts  index.ts  logger.test.ts  logger.ts  manifest.json  npm-package.json  package-lock.json  package.json  plan.md  runner.test.ts  runner.ts  schemas.ts  tool-registry.ts  tsconfig.json  vite.config.ts  vite.content-script.config.ts  vite.worker.config.ts  vitest.config.ts  worker.ts
crates/extension-js/js/__mocks__/: dom-semantic-tree.js  extension_js.ts
crates/extension-js/js/scripts/: fix-cs-owners.py  split-chrome-passthrough.py  split-runner.py  split-runtime.py
crates/extension-js/js/src/content-script/: action-result.ts  dom-tree.ts  dom-utils.ts  file-resolution.ts  form-validation.ts  handlers.ts  index.ts  listbox.ts  logger.ts  message-router.ts  observation-lease.ts  registry.ts  schemas.ts  snapshot.ts
crates/extension-js/js/src/main/: index.ts  tab-context.ts
crates/extension-js/js/src/main/runner/: command.ts  fetch.ts  host.ts  index.ts  runtime.ts  snapshot-merge.ts
crates/extension-js/js/src/main/session/: extension-session.ts  tab-tracker.ts
crates/extension-js/js/src/shared/: array-buffer.ts  collect-inline-snapshot.ts  fetch-response.ts  fs-types.ts  generated.ts  log-levels.ts  ref-id.ts  schemas.ts  snapshot-dom.ts  snapshot-filter.ts  tool-registry.ts
crates/extension-js/js/src/shared/cross/: agent-errors.ts  capability.ts  clickability.ts  collect-inline-snapshot.ts  content-script-actions.ts  content-script-capabilities.ts  content-script-tools.ts  dispatch.ts  format-types.ts  fs-types.ts  generated.ts  manifest.ts  page-specs.ts  schemas.ts  snapshot-filter.ts  tab-specs.ts
crates/extension-js/js/src/shared/cs/: dom-enrichers.ts  dom-pipeline.ts  ref-id.ts  snapshot-dom.ts  snapshot-walker.ts
crates/extension-js/js/src/shared/main/: content-script-response.ts  define-content-script-tool.ts  logger.ts  register-all-content-script-capabilities.ts  register-capability.ts  routes.ts  tool-registry.ts
crates/extension-js/js/src/shared/registry/: agent-errors.ts  dispatch.ts  (+9 more)
crates/extension-js/js/src/worker/: binary-blob-store.ts  extension_js.d.ts  fetch-store.ts  resolve-set-files.ts  vfs-write-cache.ts  worker.ts
crates/extension-js/js/test/: action-result.test.ts  api-docs-integration.test.ts  array-buffer.test.ts  binary-blob-store.test.ts  browsergent-cold-tab.test.ts  browsergent-parity.test.ts  clickability.test.ts  content-script.test.ts  fetch-binary.test.ts  fetch-store.test.ts  format-namespaces.test.ts  fs-write.test.ts  iframe-refid-schema.test.ts  index.test.ts  logger.test.ts  manifest-docs.test.ts  network-log-store.test.ts  network-tools.test.ts  network-tracker.test.ts  no-execute-in-tab.test.ts  normalize-agent-error.test.ts  observation-nodes.test.ts  page-dom.test.ts  page-find.test.ts  published-bundle-consumer.contract.test.ts  refind-bug.test.ts  resolve-set-files.test.ts  runner.test.ts  runtime-capabilities.test.ts  schemas.test.ts  scroll-to-schemas.test.ts  send-message-to-tab.test.ts  session-isolation.test.ts  set-files-hidden-input.test.ts  setup-symlink.ts  snapshot-bounds.test.ts  snapshot-dispatch.test.ts  snapshot-dom.test.ts  snapshot-errors.test.ts  snapshot-filter.test.ts  (+4 more)
crates/extension-js/js/test/registry/: content-script-registry.test.ts  content-script-response.test.ts  content-script-schemas.test.ts  content-script-tools.test.ts  dispatch.test.ts  register-capability.test.ts  routes.test.ts  tab-context.test.ts  zod-to-docs.test.ts
crates/extension-js/src/: browser_api.rs  csv.rs  fs.rs  lib.rs  log.rs  pdf.rs  session.rs  vfs_write_cache.rs  xlsx.rs  zip.rs
crates/js/: dom_semantic_tree.js  index.ts
crates/src/: collect.rs  format.rs  geometry.rs  model.rs  role.rs  state.rs
crates/tests/: native_format_tests.rs  native_name_tests.rs  native_role_tests.rs  wasm_dom_tests.rs
crates/web-fs/: Cargo.toml
crates/web-fs/src/: error.rs  lib.rs  metadata.rs  opfs.rs  parse.rs  path_util.rs  stub.rs
crates/web-fs/tests/fixtures/: real.xlsx
crates/web-js/: Cargo.toml
crates/web-js-base/: Cargo.toml
crates/web-js-base/src/: lib.rs  session.rs  types.rs
crates/web-js-core/: Cargo.toml
crates/web-js-core/src/: action.rs  api_docs.rs  async_resume.rs  cell_wrap.rs  command_params.rs  globals.rs  handler_registry.rs  js_value.rs  lib.rs  macros.rs  session.rs  state.rs  test_run_cell.rs  types.rs  utils.rs
crates/web-js-core/src/error/: classify.rs  format.rs  js_exception.rs  mod.rs
crates/web-js-core/src/web/: mod.rs  prelude.js
crates/web-js/js/: api.json  index.ts  registry.ts  web_js.d.ts  web_js_bg.wasm.d.ts
crates/web-js/js/bench/: bench.html  bench.mjs  run-playwright.mjs  serve.mjs
crates/web-js/src/: browser_api.rs  lib.rs  session.rs
date-wasi-repro/: Cargo.toml  README.md  build.sh  inject-env-stubs.js  test.html
date-wasi-repro/pkg/: date_wasi_repro.d.ts  date_wasi_repro.js  date_wasi_repro_bg.wasm  date_wasi_repro_bg.wasm.d.ts
date-wasi-repro/src/: lib.rs
(+323 files in other folders)
