[workspace]
resolver = "2"
members = [
    "crates/web-js-core",
    "crates/web-js-base",
    "crates/web-js",
    "crates/extension-js",
    "crates/dom-semantic-tree",
    "crates/web-fs",
]

[workspace.package]
version = "0.14.0"
edition = "2021"
authors = ["Irving Ou"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3" }
url = "2"
dom-semantic-tree = { path = "crates/dom-semantic-tree" }
web-fs = { path = "crates/web-fs" }
rquickjs = { version = "0.11", features = ["rust-alloc", "disable-assertions"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.3"
futures-util = "0.3"
js-sys = "0.3"
tsify = "0.5"
ts-rs = "12"
serde-wasm-bindgen = "0.6"
data-encoding = "2.6"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-wasm = "0.2"
csv = "1"
calamine = "0.26"
pdfplumber = { version = "0.1", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
# Size-optimized for WASM. Strip is safe for tracing: file!/line! are
# compile-time literals, so log locations survive symbol stripping.
# panic="abort" intentionally omitted — wasm-bindgen-futures and the JS
# callback error paths rely on unwinding.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
