[package]
name = "dom-semantic-tree"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DOM-derived semantic tree extractor for browser agents"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
tsify = "0.5"
ts-rs = "12"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlButtonElement",
  "HtmlAnchorElement",
  "HtmlImageElement",
  "HtmlLabelElement",
  "HtmlOptionElement",
  "Node",
  "NodeList",
  "Window",
  "DomRect",
  "CssStyleDeclaration",
  "HtmlCollection",
  "CharacterData",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
