[package]
name = "extension-js"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-js-base = { path = "../web-js-base" }
web-js-core = { path = "../web-js-core" }
web-fs = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
data-encoding = { workspace = true }
tsify = { workspace = true }
tracing = { workspace = true }
tracing-wasm = { workspace = true }
tracing-subscriber = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WorkerGlobalScope",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
