[package]
name = "web-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde.workspace = true
thiserror = { workspace = true }
data-encoding = { workspace = true }
sha2 = "0.10"
sha1 = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "StorageManager",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemWritableFileStream",
  "FileSystemGetFileOptions",
  "FileSystemGetDirectoryOptions",
  "FileSystemCreateWritableOptions",
  "FileSystemRemoveOptions",
  "FileSystemHandle",
  "FileSystemHandleKind",
  "File",
]
