[package]
name = "web-js"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-js-base = { path = "../web-js-base" }
web-js-core = { path = "../web-js-core" }
dom-semantic-tree = { workspace = true }
web-fs = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
tsify = { workspace = true }
data-encoding = { workspace = true }

rquickjs = { workspace = true }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "Node",
  "NodeList",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "Location",
  "History",
  "Storage",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
  "AbortSignal",
  "AbortController",
  "MouseEvent",
  "MouseEventInit",
  "KeyboardEvent",
  "KeyboardEventInit",
  "UiEvent",
  "UiEventInit",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
